// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Pagination component should contain .cardWrapper wrapper 1`] = `
<div
  className="wrapper"
>
  <div
    className="leftSide"
  >
    <PageNumberBtn
      currentPage={1}
      key="1"
      numberPage={1}
    />
    <PageNumberBtn
      currentPage={1}
      key="2"
      numberPage={2}
    />
    <PageNumberBtn
      currentPage={1}
      key="3"
      numberPage={3}
    />
    <PageNumberBtn
      currentPage={1}
      key="4"
      numberPage={4}
    />
    <PageNumberBtn
      currentPage={1}
      key="5"
      numberPage={5}
    />
    <ArrowNavigation
      currentPage={1}
      paginateToNextPage={[MockFunction]}
      paginateToPrevPage={[MockFunction]}
    />
  </div>
  <div
    className="rightSide"
  >
    <ShowCards
      changeAmountCards={[MockFunction]}
      personPerPage={10}
    />
  </div>
</div>
`;

exports[`should render more btns should contain 10 btns 1`] = `
<div
  className="wrapper"
>
  <div
    className="leftSide"
  >
    <PageNumberBtn
      currentPage={1}
      key="1"
      numberPage={1}
    />
    <PageNumberBtn
      currentPage={1}
      key="2"
      numberPage={2}
    />
    <PageNumberBtn
      currentPage={1}
      key="3"
      numberPage={3}
    />
    <PageNumberBtn
      currentPage={1}
      key="..."
      numberPage="..."
    />
    <PageNumberBtn
      currentPage={1}
      key="10"
      numberPage={10}
    />
    <ArrowNavigation
      currentPage={1}
      paginateToNextPage={[MockFunction]}
      paginateToPrevPage={[MockFunction]}
    />
  </div>
  <div
    className="rightSide"
  >
    <ShowCards
      changeAmountCards={[MockFunction]}
      personPerPage={10}
    />
  </div>
</div>
`;
